# mgjson

./: CMakeLists.txt  README.md  mgjson-config.cmake  mgjson.pri  mgjson.pro
include/: GJson.h  mgjson.h  mgjson_shared_data.h
src/: mgjson.cpp
tests/: CMakeLists.txt  mgjson_gtest.cpp  mgjson_qtest.cpp  mgjson_qtest.pro  mgjson_shared_data_gtest.cpp
